dxscale/sales/callItems/objects/CallItemControlSwtich__c/CallItemControlSwtich__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to control automations on the CallList object. By default all are enabled. Can be overridden by user or profile.</description>
    <label>Call Item Control Swtich</label>
</CustomObject>