dxscale/sales/callItems/objects/CallItemControlSwtich__c/fields/Run_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Run_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of account assignment rules</description>
    <inlineHelpText>Checkbox to control the execution of account assignment rules</inlineHelpText>
    <label>Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>