dxscale/sales/callItems/objects/CallItemControlSwtich__c/fields/Run_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Run_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of process builders on the Callist object</description>
    <inlineHelpText>Checkbox to control the execution of process builders on the Calllist object</inlineHelpText>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>