dxscale/sales/callItems/objects/CallItemControlSwtich__c/fields/Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of validation rules on the calllist object</description>
    <inlineHelpText>Checkbox to control the execution of validation rules on the callist object</inlineHelpText>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>