dxscale/sales/callItems/objects/CallItemControlSwtich__c/fields/Run_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Run_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of workflows on the callist object</description>
    <inlineHelpText>Checkbox to control the execution of workflows on the callist object</inlineHelpText>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>